<resources>
    <string name="app_name">BM&amp;C - Compliance Inspection Helper</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_login">This username is invalid</string>
    <string name="error_pattern_mismatch">Invalid pattern</string>
    <string name="error_invalid_length">This field is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
...
    <!-- Strings related to compliance inspection -->
    <string name="title_activity_compliance_inspection">Compliance Inspection</string>
    <string name="date_hint">Date</string>
    <string name="prompt_finding">Finding</string>
    <string name="prompt_comment">Description</string>
    <string name="prompt_status">Select Open or Closed</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_general_info">General Building Info</string>

    <!-- Strings related to menu items -->
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>

    <!-- Strings related to change password -->
    <string name="title_activity_change_password">Change Password</string>
    <string name="prompt_new_password">Enter new password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_change_password">Change Password</string>
    <string name="error_password_mismatch">Password does not match</string>
    <string name="error_invalid_password">Invalid password. Please have: At least one lowercase letter, at least one uppercase letter, and at least one digit</string>

...
